--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ django-redis==4.10.0
 djangorestframework==3.9.2
 graphene==2.1.3
 graphene-django==2.2.0
+graphene-django-extras==0.4.3
 graphql-core==2.1
 graphql-relay==0.4.5
 gunicorn==19.9.0
 idna==2.8
 more-itertools==5.0.0
 mysqlclient==1.3.14
+pkg-resources==0.0.0
 pluggy==0.8.1
 pprintpp==0.4.0
 promise==2.2.1
