--- a/.env.template
+++ b/.env.template
@@ -13,6 +13,7 @@ DB_OPENSTACK_PORT=''
 # Resource Server
 RS_CLIENT_ID=''
 RS_CLIENT_SECRET=''
-
+REQUIRED_SCOPES=''
 # IDP
 IDP_BASE_URL=''
+IDP_INTROSPECTION_ENDPOINT='oauth2/token/introspection'
