chore: create docker compose dev env
Signed-off-by: romanetar <roman_ag@hotmail.com>

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,6 @@
 SECRET_KEY=''
 
 # Databases
-
 DB_OPENSTACK_ENGINE=''
 DB_OPENSTACK_NAME=''
 DB_OPENSTACK_USER=''
@@ -10,10 +9,16 @@ DB_OPENSTACK_PASSWORD=''
 DB_OPENSTACK_HOST=''
 DB_OPENSTACK_PORT=''
 
+# Redis
+REDIS_PORT=
+REDIS_PASSWORD=
+REDIS_LOCATION=
+
 # Resource Server
 RS_CLIENT_ID=''
 RS_CLIENT_SECRET=''
 REQUIRED_SCOPES=''
+
 # IDP
 IDP_BASE_URL=''
 IDP_INTROSPECTION_ENDPOINT='oauth2/token/introspection'
