--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     ports:
       - ${REDIS_PORT}
     volumes:
-      - /tmp/redis:/root/redis
+      - /tmp/summit_reports_api/redis:/root/redis
       - ./docker-compose/redis/redis.conf:/usr/local/etc/redis/redis.conf
     networks:
       - summit-report-api-local-net
@@ -49,7 +49,7 @@ services:
       timeout: 20s
       retries: 10
     volumes:
-      - /tmp/mysql/${DB_OPENSTACK_NAME}:/var/lib/mysql
+      - /tmp/summit_reports_api/mysql:/var/lib/mysql
       - ./docker-compose/mysql:/docker-entrypoint-initdb.d
     networks:
       - summit-report-api-local-net
