--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,39 @@
 aniso8601==9.0.1
+asgiref==3.8.1
 atomicwrites==1.4.1
 attrs==23.2.0
 certifi==2024.2.2
+cffi==1.17.1
 chardet==5.2.0
+charset-normalizer==3.4.1
 coverage==7.4.3
+cryptography==44.0.2
 Django==5.0.3
 django-cors-headers==4.3.1
 django-filter==22.1
 django-redis==5.4.0
 djangorestframework==3.14.0
 graphene==3.3
-graphene-django==3.2
+graphene-django==3.2.0
 graphene-django-extras==1.0.0
 graphql-core==3.2.3
 graphql-relay==3.2.0
 gunicorn==21.2.0
 idna==3.6
+iniconfig==2.1.0
 more-itertools==10.2.0
+packaging==24.2
 pluggy==1.4.0
 pprintpp==0.4.0
 promise==2.3
 pycountry==23.12.11
 pycountry-convert==0.7.2
-pymysql==1.1.0
+pycparser==2.22
+PyMySQL==1.1.0
 pytest==8.1.1
 pytest-cov==4.1.0
 pytest-mock==3.12.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.3
@@ -34,6 +42,8 @@ requests==2.31.0
 Rx==3.2.0
 singledispatch==4.1.0
 six==1.16.0
+sqlparse==0.5.3
 style==1.1.0
+text-unidecode==1.3
 update==0.0.1
 urllib3==2.2.1
